cambio icono en todo los headers

--- a/nosotros.html
+++ b/nosotros.html
@@ -10,18 +10,18 @@
 <body>
     <!-- Comienza encabezado -->
     <header>   
-        <nav class="flex-container">
-            <a id ="logo" href="index.html">INGENIO</a>
-            <label for="drop" class="toggle">Menu</label>
-            <input type="checkbox" id="drop" />        
-            <ul class="menu ">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="proyectos.html">Proyectos</a></li>
-                <li><a href="servicio.html">Servicios</a></li>   
-                <li><a href="contacto.html">Contacto</a></li>
-        </ul>        
-    </nav>
+            <nav class="flex-container">
+                <a id ="logo" href="index.html">INGENIO</a>   
+                <label for="drop" class="toggle"><img src="imagenes/menu.png" alt="imagen menu" width="60px"></label>
+                <input type="checkbox" id="drop" />        
+                <ul class="menu ">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="proyectos.html">Proyectos</a></li>
+                    <li><a href="servicio.html">Servicios</a></li>   
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>        
+            </nav>        
     </header>
     <!-- Fin encabezado -->
     <br>
