--- a/contacto.html
+++ b/contacto.html
@@ -10,8 +10,8 @@
 <body>
     <header>   
         <nav class="flex-container">
-            <a id ="logo" href="index.html">INGENIO</a>
-            <label for="drop" class="toggle">Menu</label>
+            <a id ="logo" href="index.html">INGENIO</a>   
+            <label for="drop" class="toggle"><img src="imagenes/menu.png" alt="imagen menu" width="60px"></label>
             <input type="checkbox" id="drop" />        
             <ul class="menu ">
                 <li><a href="index.html">Inicio</a></li>
