--- a/proyectos.html
+++ b/proyectos.html
@@ -10,8 +10,8 @@
 <body>
     <header>   
         <nav class="flex-container">
-            <a id ="logo" href="index.html">INGENIO</a>
-            <label for="drop" class="toggle">Menu</label>
+            <a id ="logo" href="index.html">INGENIO</a>   
+            <label for="drop" class="toggle"><img src="imagenes/menu.png" alt="imagen menu" width="60px"></label>
             <input type="checkbox" id="drop" />        
             <ul class="menu ">
                 <li><a href="index.html">Inicio</a></li>
@@ -19,8 +19,8 @@
                 <li><a href="proyectos.html">Proyectos</a></li>
                 <li><a href="servicio.html">Servicios</a></li>   
                 <li><a href="contacto.html">Contacto</a></li>
-        </ul>        
-    </nav>
+            </ul>        
+        </nav>
     </header>
     <br>
     <br>
