--- a/servicio.html
+++ b/servicio.html
@@ -11,8 +11,8 @@
     <!-- Comienza encabezado -->
     <header>   
         <nav class="flex-container">
-            <a id ="logo" href="index.html">INGENIO</a>
-            <label for="drop" class="toggle">Menu</label>
+            <a id ="logo" href="index.html">INGENIO</a>   
+            <label for="drop" class="toggle"><img src="imagenes/menu.png" alt="imagen menu" width="60px"></label>
             <input type="checkbox" id="drop" />        
             <ul class="menu ">
                 <li><a href="index.html">Inicio</a></li>
@@ -22,7 +22,7 @@
                 <li><a href="contacto.html">Contacto</a></li>
         </ul>        
     </nav>
-    </header>>
+    </header>
     <!-- Fin encabezado -->
     <br>
     <br>
